fixed todo overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -350,20 +350,35 @@ html,body{
   height: 2em;
   display: flex;
   justify-content: center;
-  max-width: 20vw;
+  width: auto;
   z-index: 5;
 }
 #todo-list{
   width: 40vw;
   z-index: 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 20vw;
 }
+
 .remove-button{
   float: right;
   margin-right:10px;
   border-radius: 100%;
   opacity: .3;
 }
-
+#first-name{
+  word-wrap: break-word;
+  width: 80vw;
+  
+}
+.todoli{
+  word-wrap: break-word;
+  width: 60vw;
+  left: center;
+  
+}
 .todoli:hover .remove-button{
   opacity: 1;
 }
